--- a/Droid/Resources/layout/DropItemActivity.axml
+++ b/Droid/Resources/layout/DropItemActivity.axml
@@ -9,8 +9,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/linearLayout1"
-        android:background="@drawable/bg">
+        android:id="@+id/linearLayout1">
         <RelativeLayout
             android:minWidth="25px"
             android:minHeight="25px"
